# rdbms-rs

./: .gitignore  Cargo.toml  README.md
examples/: btree-all.rs  btree-create.rs  simple-table-create.rs  simple-table-exact.rs  simple-table-range.rs  simple-table-scan.rs
src/: bsearch.rs  btree.rs  buffer.rs  disk.rs  lib.rs  query.rs  slotted.rs  table.rs  tuple.rs
src/btree/: leaf.rs  node.rs
