[package]
name = "rdbms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerocopy = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"]}
bincode = "1.3"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.1"
